--- a/vista/login/admin.html
+++ b/vista/login/admin.html
@@ -15,21 +15,7 @@
 <body>
     <div class="container container--login">
         <form id="signup" class="form form--login">
-
-            <div class="header--login">
-                <img src="./img/icon.png" alt="">
-            </div>
-
-            <div class="form-field">
-                <div class="leyenda">
-                    <span class="material-icons-outlined">person</span>
-                    <p class="space">Nombre de usuario</p>
-                </div>
-                <input type="text" name="username" id="username" autocomplete="off" placeholder="Ingrese su nombre de usuario">
-                <small class="oculto small">
-                    
-                </small>
-            </div>
+            <h1>Admin</h1>
 
             <div class="form-field">
                 <div class="leyenda">
@@ -45,15 +31,10 @@
 
             
             <div class="form-field">
-                <button type="submit" class="btn" onclick="check(1)">
+                <button type="submit" class="btn" onclick="check(4)">
                     <span class="material-icons-outlined">login</span>
                     Iniciar sesion
                 </button>
-            </div>
-
-            <div class="form-field formFlex">
-                <a href="./olvido.html" target="_blank">¿Olvidaste tu contraseña?</a>
-                <a href="./registro.html">Registro</a>
             </div>
         </form>
     </div>
